@@ -6,7 +6,8 @@
 #cnx_portal-siteactions, #cnx_portal-searchbox, #cnx_portal-globalnav, 
 #cnx_sidebar_column, #musical-examples, .title-bar, #cnx_actions_bottom, 
 #cnx_prev_next_top *, #cnx_author_links_togglers, .hiddenStructure, 
-.solution-toggles, .ca_button, #cnx_order_link, .cnx_email_author, .lensinfo{
+.solution-toggles, .ca_button, #cnx_order_link, .cnx_email_author, .lensinfo, 
+#cnx_social_media_top{
   display: none !important;
 }
 
